Fix FFmpeg Loading with Stable Version

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive Kids Book with Text-to-Speech</title>
+    <!-- FFmpeg library for video processing -->
+    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.9.7/dist/ffmpeg.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
